<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/vector"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_tvShows"
        android:icon="@drawable/monitor"
        android:title="Series" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_person"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_storage"
        android:icon="@drawable/save_vector"
        android:title="BookMarks" />




</menu>